kubernetes/apps/default/burthorpe-pooch-parlour/app/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: burthorpe-pooch-parlour
spec:
  selector:
    app.kubernetes.io/name: burthorpe-pooch-parlour
  ports:
    - name: http
      port: 3000
      targetPort: http
