kubernetes/apps/default/burthorpe-pooch-parlour/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: burthorpe-pooch-parlour
spec:
  parentRefs:
    - name: envoy-external
      namespace: network
      sectionName: https
  hostnames:
    - bpp.iacobapp.dev
  rules:
    - backendRefs:
        - name: burthorpe-pooch-parlour
          port: 3000
